@startuml
title Final Project - Academic Management Diagram

left to right direction
hide circle
hide methods

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam nodesep 75
skinparam ranksep 75

skinparam Class {
  BorderColor #334155
  BackgroundColor white
  FontColor #0F172A
}

skinparam Arrow {
  Color #475569
  Thickness 1
}

skinparam Note {
  BackgroundColor #FFF7ED
  BorderColor #F97316
  FontColor #7C2D12
}

package "Academic Structure" {
  class LanguageProgram {
    +id: bigint
    +code: string
    +name: string
    +is_active: boolean
  }

  class Course {
    +id: bigint
    +program_id: bigint
    +code: string
    +name: string
    +price: integer
  }

  class CourseClass {
    +id: bigint
    +course_id: bigint
    +teacher_id: bigint?
    +capacity: integer
  }
}

package "Users" {
  class User {
    +id: bigint
    +name: string
    +email: string
    +requested_role: string
  }
}

package "Academic Operations" {
  class TeacherResource {
    +id: bigint
    +class_id: bigint
    +category: string
    +name: string
  }

  class AttendanceRecord {
    +id: bigint
    +class_id: bigint
    +student_id: bigint
    +attendance_date: date
    +status: string
    +grade: decimal
  }

  class StudentTuition {
    +id: bigint
    +student_id: bigint
    +course_id: bigint
    +course_price: integer
  }
}

LanguageProgram "1" --> "*" Course : contains
Course "1" --> "*" CourseClass : offered as

User "1" --> "*" CourseClass : teaches
User "*" --> "*" CourseClass : enrolls

CourseClass "1" --> "*" TeacherResource : resources
CourseClass "1" --> "*" AttendanceRecord : attendance
Course "1" --> "*" StudentTuition : tuition basis
User "1" --> "0..1" StudentTuition : has tuition

User ..> TeacherResource : uploads
User ..> AttendanceRecord : evaluated

note bottom of User
Students and teachers are stored
as User records.

Their behavior depends on
assigned roles.
end note

note right of CourseClass
CourseClass is the teaching group.

It links the course, teacher,
students, resources, and attendance.
end note

note bottom of StudentTuition
After approval, the selected
course price is stored for
payment tracking.
end note

@enduml